# smart-competition-center

./: CMakeLists.txt  CMakeLists.txt.user.0271905  CMakeLists.txt.user.36dd996  CMakeLists.txt.user.ec32a7e  CMakeLists.txt.user.f94c362  EmployeePage.cpp  EmployeePage.h  README.md  aipredictionpage.cpp  aipredictionpage.h  arbitrepage.cpp  arbitrepage.h  create a tables that  present table.txt  dashboardpage.cpp  dashboardpage.h  homepage.cpp  homepage.h  homeviewform.cpp  homeviewform.h  main.cpp  matchespage.cpp  matchespage.h  reportspage.cpp  reportspage.h  teamspage.cpp  teamspage.h  terrianspage.cpp  terrianspage.h  ticketspage.cpp  ticketspage.h
